syntax = "proto3";
package pdelta;

import "google/protobuf/dart_options.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/dave/protod/packages/pdelta/pkg/pdelta;pdelta";
option (dart_options.dart_package) = "pdelta";

message Op {
  enum Type {
    Null = 0;
    Set = 1;      // set the value
    Edit = 2;     // modify a scalar value - quill, math etc.
    Insert = 3;   // insert at a specific location in a list
    Move = 4;     // move in a list
    Rename = 5;   // change the key in a map
    Delete = 6;   // delete from a list or map, or unset the value
    Compound = 7; // several operations combined into one
  }
  Type type = 1;
  repeated Locator location = 2;
  repeated Op ops = 3; // children for compound operations
  oneof value {
    Scalar scalar = 4;               // new value [Set, Insert]
    google.protobuf.Any message = 6; // new value [Set, Insert]
    Fragment fragment = 7;           // new value [Set, Insert]
    Delta delta = 8;                 // modification of a scalar value - quill, math etc [Edit]
    int64 index = 9;                 // new index [Move]
    Key key = 10;                    // new key [Rename]
  }
}

message Locator {
  oneof v {
    Field field = 1;
    int64 index = 2;
    Key key = 3;
    Oneof oneof = 4;
  }
}

message Key {
  oneof v {
    bool bool = 1;
    int32 int32 = 2;
    int64 int64 = 3;
    uint32 uint32 = 4;
    uint64 uint64 = 5;
    string string = 6;
  }
}

message Field {
  string name = 1;
  int32 number = 2;
  string message_full_name = 3;
}

message Oneof {
  string name = 1;
  repeated Field fields = 2;
}

message Scalar {
  oneof v {
    double double = 1;
    float float = 2;
    int32 int32 = 3;
    int64 int64 = 4;
    uint32 uint32 = 5;
    uint64 uint64 = 6;
    sint32 sint32 = 7;
    sint64 sint64 = 8;
    fixed32 fixed32 = 9;
    fixed64 fixed64 = 10;
    sfixed32 sfixed32 = 11;
    sfixed64 sfixed64 = 12;
    bool bool = 13;
    string string = 14;
    bytes bytes = 15;
    int32 enum = 16;
  }
}

message Delta {
  oneof v {
    QuillDelta quill = 1;
    // TODO: add math operations for numeric values - just ADD?
  }
}

message QuillDelta {
  repeated Quill ops = 1;
}

message Quill {
  oneof v {
    string insert = 1; // text inserted (utf-8)
    int64 retain = 2;  // length of text retained - note: this counts unicode codepoints, not bytes or grapheme clusters TODO: check this works cross platform
    int64 delete = 3;  // length of text deleted - note: this counts unicode codepoints, not bytes or grapheme clusters TODO: check this works cross platform
  }
  google.protobuf.Struct attributes = 4;
}

message Fragment {
  Field field = 1;
  google.protobuf.Any message = 2;
}
